--- a/Frontend/src/AdminVerified/index.html
+++ b/Frontend/src/AdminVerified/index.html
@@ -6,23 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Admin Login</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="admin-styles.css">
 </head>
 
 <body>
     <header>TAS OC 2019 Games and Gift Sign-Up</header>
+    <div class="login">
+        <p>Admin Logged In</p>
+    </div>
+    <div class="login">
+        <p>Upload Gift Wishlist in <span style="color:red">.csv</span> file format below.</p>
+    </div>
     <section class="table">
-
         <form action="/CSVUpload" method="POST">
             <div class="login">
-                <p>Admin Logged In</p>
+                <input type = "file" name = "csv" accept = ".csv">
             </div>
-            <div class="login">
-                <p>Upload Gift Wishlist in </p>
-                <p styles = "color: red">.csv</p>
-                <p> file format below.</p>
-            </div>
-            <input type = "file" name = "csv">
             <div class = "login">
             <button type="submit">Upload</button>
             </div>
