Better comments on script.js

--- a/Frontend/src/Home/index.html
+++ b/Frontend/src/Home/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OC </title>
-    <link rel="stylesheet" href="/home-styles.css">
+    <link rel="stylesheet" href="/css/home-styles.css">
 </head>
 
 <body>
@@ -42,8 +42,8 @@
                 <option value="price">Price Range</option>
             </select>
         </div>
-        <div class="refresh-button" style="margin-left:auto;">
-            <button type="button" onclick="refresh()">Refresh</button>
+        <div style="margin-left:auto;">
+            <button class="refresh-button" type="button" onclick="refresh()">Refresh</button>
         </div>
     </section>
     <div class="item-count">
@@ -51,7 +51,7 @@
     <section class="table">
         
     </section>
-    <script src="script.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 
 </html>
