--- a/Frontend/src/Home/index.html
+++ b/Frontend/src/Home/index.html
@@ -15,28 +15,28 @@
         <div class="checkbox-container" style="margin-right:auto;">
             <p><strong>View:</strong></p>
 
-            <input class="checkbox" type="checkbox" id="Clothing/Accessory" checked onchange="updateViewTable()">
+            <input class="checkbox" type="checkbox" id="Clothing/Accessory" checked onchange="updateItemViewList()">
             <label for="Clothing/Accessory">Clothing/Accessory</label>
 
-            <input class="checkbox" type="checkbox" id="Shoes" checked onchange="updateViewTable()">
+            <input class="checkbox" type="checkbox" id="Shoes" checked onchange="updateItemViewList()">
             <label for="Shoes">Shoes</label>
 
-            <input class="checkbox" type="checkbox" id="Stationery" checked onchange="updateViewTable()">
+            <input class="checkbox" type="checkbox" id="Stationery" checked onchange="updateItemViewList()">
             <label for="Stationery">Stationery</label>
 
-            <input class="checkbox" type="checkbox" id="Gift Cards" checked onchange="updateViewTable()">
+            <input class="checkbox" type="checkbox" id="Gift Cards" checked onchange="updateItemViewList()">
             <label for="Gift Cards">Gift Cards</label>
 
-            <input class="checkbox" type="checkbox" id="Miscellaneous" checked onchange="updateViewTable()">
+            <input class="checkbox" type="checkbox" id="Miscellaneous" checked onchange="updateItemViewList()">
             <label for="Miscellaneous">Miscellaneous</label>
         </div>
         <input type="text" style="margin-left: auto;" class="search-bar" placeholder="Search..."
-            onkeyup="updateViewTable()">
+            onkeyup="updateItemViewList()">
     </section>
     <section>
         <div class="sort-by-dropdown" style="margin-right:auto;">
             <p><strong>Order by: </strong></p>
-            <select onchange="updateViewTable()">
+            <select onchange="updateItemViewList()">
                 <option value="name">Item Name</option>
                 <option value="category">Category</option>
                 <option value="price">Price Range</option>
